--- a/ProyectoAnalisis2G8/Views/Shared/_Layout.cshtml
+++ b/ProyectoAnalisis2G8/Views/Shared/_Layout.cshtml
@@ -7,9 +7,14 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" href="~/styles/globalStyle.css">
+
     <link href="~/Theme/vendor/datatables/dataTables.bootstrap4.min.css"
           rel="stylesheet" />
+    <link rel="stylesheet" href="~/styles/globalStyle.css">
+    <link rel="stylesheet" href="~/styles/StyleSheet1.css">
+    <link rel="stylesheet" type="text/css" href="/DataTables/datatables.css">
+
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light navbar-principal">
@@ -74,6 +79,7 @@
 
     <!-- Page level custom scripts -->
     <script src="~/Theme/js/demo/datatables-demo.js"></script>
+    <script type="text/javascript" charset="utf8" src="/DataTables/datatables.js"></script>
 
     <script>
         $('#dataTable').dataTable({
