--- a/ProyectoAnalisis2G8/Views/Shared/_Layout.cshtml
+++ b/ProyectoAnalisis2G8/Views/Shared/_Layout.cshtml
@@ -7,9 +7,14 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" href="~/styles/globalStyle.css">
+
     <link href="~/Theme/vendor/datatables/dataTables.bootstrap4.min.css"
           rel="stylesheet" />
+    <link rel="stylesheet" href="~/styles/globalStyle.css">
+    <link rel="stylesheet" href="~/styles/StyleSheet1.css">
+    <link rel="stylesheet" type="text/css" href="/DataTables/datatables.css">
+
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light navbar-principal">
@@ -28,7 +33,7 @@
                             Libros
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/Books/Diary">Diario</a></li>
+                            <li><a class="dropdown-item" href="/Partida_Diario/Index">Diario</a></li>
                             <li><a class="dropdown-item" href="/Books/Mayor">Mayor</a></li>
                             <li><a class="dropdown-item" href="/Books/FinancialStatus">Estados Financieros</a></li>
                             <li><a class="dropdown-item" href="/Books/AnnualAccounts">Cuentas Anuales</a></li>
@@ -40,7 +45,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/Records/Inventory">Inventario</a></li>
-                            <li><a class="dropdown-item" href="/Records/Nomenclature">Nomenclatura Contable</a></li>
+                            <li><a class="dropdown-item" href="/Nomenclaturas/Index">Nomenclatura Contable</a></li>
                             <li><a class="dropdown-item" href="/Records/CostCenter">Centro de costos</a></li>
                         </ul>
                     </li>
@@ -74,9 +79,27 @@
 
     <!-- Page level custom scripts -->
     <script src="~/Theme/js/demo/datatables-demo.js"></script>
+    <script type="text/javascript" charset="utf8" src="/DataTables/datatables.js"></script>
 
     <script>
         $('#dataTable').dataTable({
+            "language": {
+                "search": "Buscar",
+                "lengthMenu": "Mostrar _MENU_ entradas",
+                "info": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
+                "paginate": {
+                    "first": "Primero",
+                    "last": "Último",
+                    "next": "Siguiente",
+                    "previous": "Anterior"
+                }
+            }
+        });
+  
+    </script>
+
+    <script>
+        $('#accItemTable').dataTable({
             "language": {
                 "search": "Buscar",
                 "lengthMenu": "Mostrar _MENU_ entradas",
